<resources>
    <string name="app_name">My Garden</string>

    <string name="Harmonogram">Harmonogram</string>
    <string name="Ustawienia">Ustawienia</string>
    <string name="Powiadomienia">Powiadomienia</string>
    <string name="Włącz">Włącz / wyłącz</string>
    <string name="Godzina">godzina</string>
    <string name="Dostosuj">Dostosuj</string>
    <string name="Język">Język</string>
    <string name="Informacje">Informacje o aplikacji</string>
    <string name="Rośliny">Rośliny</string>
    <string name="Dodaj">Dodaj roślinę</string>
    <string name="Nazwa">Nazwa...</string>
    <string name="Lokalizacja">Lokalizacja...</string>
    <string name="Lokal">Lokalizacja</string>
    <string name="Notatki">Notatki...</string>
    <string name="Notat">Notatki</string>
    <string name="Info">Informacje</string>
    <string name="Szczegóły">Szczegóły</string>
    <string name="Gatunek">Gatunek</string>
    <string name="Zadania">Zadania</string>
    <string name="Woda">Woda</string>
    <string name="Nawóz">Nawóz</string>
    <string name="Przesadzanie">Przesadzanie</string>
    <string name="Edytuj">Edytuj roślinę</string>
    <string name="Wybierz">Wybierz język</string>
    <string name="Kontakt">Kontakt</string>
    <string name="brak">Nie znalazłeś gatunku swojej rośliny? Skontaktuj się z nami:</string>
    <string name="miejsce">Użyj czujnika światła swojego urządzenia, aby określić poziom światła w lokalizacji rośliny.</string>
    <string name="powtarzaj">Powtarzaj co:</string>
    <string name="dni">dni</string>
    <string name="Zastosuj">Zastosuj</string>
    <string name="inform">Aplikacja stworzona w ramach pracy inżynierskiej. Autor: Alicja Kowalska</string>

 </resources>